# ClassTool

./: CMakeLists.txt  README.md  buildvs2015.win64.bat
platform/: CMakeLists.txt
platform/libquex/: CMakeLists.txt  classInfo.cpp  cpp.qx  example.h  example.txt  hFileInfo.cpp  quexNode.h  quextool.cpp
platform/libquex/QuexNodeFile/: QuexNode2Cpp.py  hFileQuexNode.h  hFileQuexNode.txt.qml
platform/libquex/include/: classInfo.h  hFileInfo.h  quextool.h
platform/libtool/: CMakeLists.txt  fileTool.cpp
platform/libtool/include/: fileTool.h
src/: CMakeLists.txt  main.cpp  mainwindow.ui
